--- a/FGM/Views/User/UserGamblingResult.cshtml
+++ b/FGM/Views/User/UserGamblingResult.cshtml
@@ -75,14 +75,12 @@
                     <table id="tblUserGamblingResult" class="table table-bordered table-striped">
                         <thead>
                             <tr>
-                                <th>UserID</th>
+                                <th style="display:none">UserID</th>
                                 <th>လောင်းသူအမည်</th>
                                 <th style="text-align:center;color:black;">နိုင်</th>
                                 <th style="text-align:center;color:black;">ရှုံး</th>
                             </tr>
                         </thead>
-                        <tfoot>
-                        </tfoot>
                     </table>
                 </div>
 
@@ -252,6 +250,7 @@
                         { "data": "NetAmountPlus", "class":"alignright blue", "width": "25%" },
                         { "data": "NetAmountMinus", "class": "alignright red", "width": "25%" },
                     ],
+                    
                 }
             );
         }
