--- a/FGM/Views/Shared/_Layout.cshtml
+++ b/FGM/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     if (System.Diagnostics.Debugger.IsAttached)
     {
 
-        loginID = "ktp";
+        loginID = "KT";
         UserName = "ကျော်သက်ပိုင်";
         UserType = "1";
 
@@ -349,6 +349,14 @@
                                     <a href="@Url.Action("UserGamblingResult","User")" class="nav-link">
                                         <i class="far fa-check-circle nav-icon text-info"></i>
                                         <p>စာရင်းတွက်/ကြည့်မည်</p>
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a href="@Url.Action("UserGamblingResultDetail","User")" class="nav-link">
+                                        <i class="far fa-check-circle nav-icon text-info"></i>
+                                        <p>စာရင်းအသေးစိပ်ကြည့်မည်</p>
                                     </a>
                                 </li>
                             </ul>
